--- a/w3/d1/package.json
+++ b/w3/d1/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
